Fixed: Looked weird on mobile.

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -7,3 +7,7 @@
 .center {
   text-align: center;
 }
+
+img {
+  max-width: calc(100vw - 40px);
+}
